--- a/PRO-C36/index.html
+++ b/PRO-C36/index.html
@@ -5,18 +5,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
-
 <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
-
+  var firebaseConfig = {
+    apiKey: "AIzaSyAxPC7nz045P-J5yaFB0X_bZLfhDfY03X8",
+    authDomain: "project36-8c9c0.firebaseapp.com",
+    projectId: "project36-8c9c0",
+    storageBucket: "project36-8c9c0.appspot.com",
+    messagingSenderId: "407499352789",
+    appId: "1:407499352789:web:a813fe274242d9f330505c"
+  };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-  
     <script src="Food.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
